Fixed Comment Section Mobile

--- a/Sandy-Nguyen-sprint-two/styles/main.scss
+++ b/Sandy-Nguyen-sprint-two/styles/main.scss
@@ -117,15 +117,18 @@ a {
             list-style-type: none;
 
             @include mobile {
+                font-size: $h3-mobile-fontsize;
                 padding: 6% 0;
             }        
             @include tablet {
                 display: inline-flex;
+                font-size: $h4-desktab-fontsize;
                 margin: 35px 15px 0 55px;
                 padding: 0 10% 17% 10%;
             }
             @include desktop {
                 display: inline-flex;
+                font-size: $h4-desktab-fontsize;
                 margin: 35px 0 0 70px;
                 padding: 0 10% 17% 10%;
             }
@@ -350,10 +353,10 @@ input {
         font-size: $h3-mobile-fontsize;
     }
     @include tablet {
-        font-size: $p-desktab-fontsize;
+        font-size: $h4-desktab-fontsize;
     }
     @include desktop {
-        font-size: $p-desktab-fontsize;
+        font-size: $h4-desktab-fontsize;
     }
 }
 .comments-section {
@@ -365,7 +368,7 @@ input {
         height: 50px;
         width: 50px;
         border-radius: 50%;
-        margin: 4% 5%;
+        margin: 4% 6%;
     }
 
     &__title {
@@ -384,16 +387,53 @@ input {
         display: flex;
         flex-wrap: wrap;
         margin: 0 auto;
+        justify-content: flex-end;
+        
+        @include mobile {
+            padding-right: 5%;
+        }
     }
     &__form {
         height: 100%;
+        width: 70%;
         
         &-input {
             background-color: $comments-box-color;
             border: 1.5px solid #E1E1E1;
             outline: none;
-            border-radius: 4%;
-            padding: 6%;
+            border-radius: 3%;
+            margin-bottom: 8%;
+
+            &-name {
+            
+                @include mobile {
+                    width: 87%;
+                    height: 3vh;
+                    padding: 5%;
+                }
+                @include tablet {
+                    width: 70%;
+                    height: 6vh;
+                }
+                @include desktop {
+                    width: 80%;
+                }
+            }
+            &-comment {
+
+                @include mobile {
+                    width: 87%;
+                    height: 16vh;
+                    padding: 5%;
+                }
+                @include tablet {
+                    width: 70%;
+                    height: 15vh;
+                }
+                @include desktop {
+                    width: 80%;
+                }
+            }
         }
         
         &-title {
@@ -412,58 +452,22 @@ input {
                 font-size: $p-desktab-fontsize;
             }
         }
-        &-name {
-            
-            @include mobile {
-                width: 114%;
-                margin-bottom: 8%;
-            }
-            @include tablet {
-                width: 200%;
-                height: 8vh;
-            }
-            @include desktop {
-                width: 80%;
-            }
-        }
-        &-comment {
-            @include mobile {
-                width: 114%;
-                height: 15vh;
-            }
-            @include tablet {
-                width: 200%;
-                height: 20vh;
-            }
-            @include desktop {
-                width: 80%;
-            }
-        }
-}
+    }
     &__button {
         background-color: $primary-background-color;
-        color: white;
-        border: none;
         border-radius: 4%;
-        padding: 1.5% 5%;
-        margin: 5%;
-        flex-wrap: wrap;
         
         @include mobile {
             font-size: $h3-mobile-fontsize;
-            font-weight: bold;
-            letter-spacing: 0.4px;
+            font-weight: 600;
             width: 60%;
-        }
-        @include tablet {
-            width: 15%;
-        }
-        @include desktop {
-            width: 40%;
-        }
+            height: 2.5vh;
+            margin: 0 1% 8% 1%;
+            padding: 6% 4.3%;
+            letter-spacing: 0.75px;
+        }     
     }
 }
-
 /*Get In Touch Section*/
 
 .footer {
